@@ -5,139 +5,163 @@ import static org.assertj.core.api.Assertions.assertThat;
 import java.time.Instant;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
-import org.mapstruct.factory.Mappers;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.mockito.InjectMocks;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.justice.laa.dstew.access.entity.ApplicationEntity;
 import uk.gov.justice.laa.dstew.access.entity.CaseworkerEntity;
+import uk.gov.justice.laa.dstew.access.entity.DecisionEntity;
 import uk.gov.justice.laa.dstew.access.entity.IndividualEntity;
-import uk.gov.justice.laa.dstew.access.model.Application;
+import uk.gov.justice.laa.dstew.access.entity.MeritsDecisionEntity;
+import uk.gov.justice.laa.dstew.access.entity.ProceedingEntity;
 import uk.gov.justice.laa.dstew.access.model.ApplicationContent;
 import uk.gov.justice.laa.dstew.access.model.ApplicationCreateRequest;
+import uk.gov.justice.laa.dstew.access.model.ApplicationMerits;
+import uk.gov.justice.laa.dstew.access.model.ApplicationProceedingResponse;
+import uk.gov.justice.laa.dstew.access.model.ApplicationResponse;
 import uk.gov.justice.laa.dstew.access.model.ApplicationStatus;
 import uk.gov.justice.laa.dstew.access.model.ApplicationUpdateRequest;
-import uk.gov.justice.laa.dstew.access.model.Individual;
-import uk.gov.justice.laa.dstew.access.model.Opponent;
-import uk.gov.justice.laa.dstew.access.model.Proceeding;
-import uk.gov.justice.laa.dstew.access.model.Provider;
+import uk.gov.justice.laa.dstew.access.model.DecisionStatus;
+import uk.gov.justice.laa.dstew.access.model.IndividualCreateRequest;
+import uk.gov.justice.laa.dstew.access.model.InvolvedChildResponse;
+import uk.gov.justice.laa.dstew.access.model.MeritsDecisionStatus;
+import uk.gov.justice.laa.dstew.access.model.OpponentResponse;
+import uk.gov.justice.laa.dstew.access.model.ProceedingLinkedChild;
+import uk.gov.justice.laa.dstew.access.model.ProviderResponse;
+import uk.gov.justice.laa.dstew.access.utils.generator.DataGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.ApplicationContentGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.ApplicationCreateRequestGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.ApplicationEntityGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.ApplicationUpdateRequestGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.application.LinkedApplicationsGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.caseworker.CaseworkerGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.decision.DecisionEntityGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.merit.MeritsDecisionsEntityGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.proceeding.ProceedingMeritsGenerator;
+import uk.gov.justice.laa.dstew.access.utils.generator.proceeding.ProceedingsEntityGenerator;
 
-class ApplicationMapperTest {
+@ExtendWith(MockitoExtension.class)
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
+public class ApplicationMapperTest extends BaseMapperTest {
 
-  private final ApplicationMapper applicationMapper = Mappers.getMapper(ApplicationMapper.class);
+  @InjectMocks private ApplicationMapperImpl applicationMapper;
 
-    @Test
-    void givenApplicationEntity_whenToApplication_thenMapsFieldsCorrectly() {
-        UUID id = UUID.randomUUID();
-        ApplicationStatus status = ApplicationStatus.APPLICATION_SUBMITTED;
-        String laaReference = "Ref456";
-        int schemaVersion = 2;
-        Map<String, Object> applicationContent = Map.of("key1", "value1", "key2", 456);
-        Instant createdAt = Instant.now().minusSeconds(600000);
-        Instant updatedAt = Instant.now();
-        Set<IndividualEntity> individuals = Set.of();
-        String officeCode = "officeCode";
+  @Test
+  void givenApplicationEntity_whenToApplication_thenMapsFieldsCorrectly() {
+    UUID id = UUID.randomUUID();
+    ApplicationStatus status = ApplicationStatus.APPLICATION_SUBMITTED;
+    String laaReference = "Ref456";
+    int schemaVersion = 2;
+    Instant createdAt = Instant.now().minusSeconds(600000);
+    Instant updatedAt = Instant.now();
+    String officeCode = "officeCode";
 
-        ApplicationEntity expectedApplicationEntity = ApplicationEntity.builder()
-                .id(id)
-                .status(status)
-                .laaReference(laaReference)
-                .schemaVersion(schemaVersion)
-                .applicationContent(applicationContent)
-                .createdAt(createdAt)
-                .modifiedAt(updatedAt)
-                .individuals(individuals)
-                .officeCode(officeCode)
-                .build();
+    ApplicationEntity expectedApplicationEntity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class,
+            builder ->
+                builder
+                    .id(id)
+                    .status(status)
+                    .laaReference(laaReference)
+                    .schemaVersion(schemaVersion)
+                    .createdAt(createdAt)
+                    .modifiedAt(updatedAt)
+                    .individuals(Set.of())
+                    .officeCode(officeCode)
+                    .applicationContent(Map.of()));
 
-        Application actualApplication = applicationMapper.toApplication(expectedApplicationEntity);
+    ApplicationResponse actualApplication =
+        applicationMapper.toApplication(expectedApplicationEntity);
 
-        assertThat(actualApplication).isNotNull();
-        assertThat(actualApplication.getApplicationId()).isEqualTo(id);
-        assertThat(actualApplication.getLaaReference()).isEqualTo(laaReference);
-        assertThat(actualApplication.getStatus()).isEqualTo(status);
-        assertThat(actualApplication.getLastUpdated()).isEqualTo(OffsetDateTime.ofInstant(updatedAt, ZoneOffset.UTC));
-        assertThat(actualApplication.getProvider()).isEqualTo(new Provider().officeCode(officeCode));
-    }
+    assertThat(actualApplication).isNotNull();
+    assertThat(actualApplication.getApplicationId()).isEqualTo(id);
+    assertThat(actualApplication.getLaaReference()).isEqualTo(laaReference);
+    assertThat(actualApplication.getStatus()).isEqualTo(status);
+    assertThat(actualApplication.getLastUpdated())
+        .isEqualTo(OffsetDateTime.ofInstant(updatedAt, ZoneOffset.UTC));
+    assertProviderEquals(actualApplication.getProvider(), officeCode, null);
+  }
 
+  @Test
+  void givenNullApplicationEntity_whenToApplication_thenReturnsNull() {
+    ApplicationEntity entity = null;
+    assertThat(applicationMapper.toApplication(entity)).isNull();
+  }
 
-    @Test
-    void givenNullApplicationEntity_whenToApplication_thenReturnsNull() {
-        ApplicationEntity entity = null;
-        assertThat(applicationMapper.toApplication(entity)).isNull();
-    }
+  @Test
+  void
+      givenApplicationWithNullCaseworker_whenToApplication_thenMapsFieldsCorrectlyWithNullCaseworker() {
+    ApplicationEntity expectedApplicationEntity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.caseworker(null));
 
-    @Test
-    void givenApplicationWithNullCaseworker_whenToApplication_thenMapsFieldsCorrectlyWithNullCaseworker() {
-        Instant createdAt = Instant.now();
-        Instant modifiedAt = Instant.now();
-        Set<IndividualEntity> individuals = Set.of();
-        CaseworkerEntity caseworker = null;
+    ApplicationResponse actualApplication =
+        applicationMapper.toApplication(expectedApplicationEntity);
+    assertThat(actualApplication.getAssignedTo()).isNull();
+  }
 
-        ApplicationEntity expectedApplicationEntity = ApplicationEntity.builder()
-                .createdAt(createdAt)
-                .modifiedAt(modifiedAt)
-                .caseworker(caseworker)
-                .individuals(individuals)
-                .build();
+  @Test
+  void givenApplicationWithCaseworker_whenToApplication_thenMapsFieldsCorrectlyWithCaseworker() {
+    UUID caseworkerId = UUID.randomUUID();
 
-        Application actualApplication = applicationMapper.toApplication(expectedApplicationEntity);
-        assertThat(actualApplication.getAssignedTo()).isNull();
-    }
+    CaseworkerEntity caseworker =
+        DataGenerator.createDefault(CaseworkerGenerator.class, builder -> builder.id(caseworkerId));
 
-    @Test
-    void givenApplicationWithCaseworker_whenToApplication_thenMapsFieldsCorrectlyWithCaseworker() {
-        UUID caseworkerId = UUID.randomUUID();
-        Instant createdAt = Instant.now();
-        Instant modifiedAt = Instant.now();
-        Set<IndividualEntity> individuals = Set.of();
+    ApplicationEntity expectedApplicationEntity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.caseworker(caseworker));
 
-        CaseworkerEntity caseworker = CaseworkerEntity.builder().id(caseworkerId).build();
+    ApplicationResponse actualApplication =
+        applicationMapper.toApplication(expectedApplicationEntity);
+    assertThat(actualApplication.getAssignedTo()).isEqualTo(caseworkerId);
+  }
 
-        ApplicationEntity expectedApplicationEntity = ApplicationEntity.builder()
-                .createdAt(createdAt)
-                .modifiedAt(modifiedAt)
-                .caseworker(caseworker)
-                .individuals(individuals)
-                .build();
+  @Test
+  void givenApplicationCreateRequest_whenToApplicationEntity_thenMapsFieldsCorrectly() {
+    ApplicationStatus status = ApplicationStatus.APPLICATION_SUBMITTED;
+    String laaReference = "laa_reference";
+    List<IndividualCreateRequest> expectedIndividuals =
+        List.of(
+            IndividualCreateRequest.builder().build(), IndividualCreateRequest.builder().build());
 
-        Application actualApplication = applicationMapper.toApplication(expectedApplicationEntity);
-        assertThat(actualApplication.getAssignedTo()).isEqualTo(caseworkerId);
-    }
+    Map<String, Object> applicationContent =
+        (Map<String, Object>)
+            objectMapper.convertValue(
+                DataGenerator.createDefault(
+                    ApplicationContentGenerator.class,
+                    builder ->
+                        builder
+                            .status(String.valueOf(ApplicationStatus.APPLICATION_IN_PROGRESS))
+                            .laaReference(laaReference)
+                            .allLinkedApplications(
+                                DataGenerator.createMultipleDefault(
+                                    LinkedApplicationsGenerator.class, 2))),
+                Map.class);
 
-    @Test
-    void givenApplicationCreateRequest_whenToApplicationEntity_thenMapsFieldsCorrectly() {
-        ApplicationStatus status = ApplicationStatus.APPLICATION_SUBMITTED;
-    UUID applicationContentId = UUID.randomUUID();
+    ApplicationCreateRequest expectedApplicationCreateRequest =
+        DataGenerator.createDefault(
+            ApplicationCreateRequestGenerator.class,
+            builder ->
+                builder
+                    .status(status)
+                    .laaReference(laaReference)
+                    .individuals(expectedIndividuals)
+                    .applicationContent(applicationContent));
 
-      ApplicationContent applicationContent = ApplicationContent.builder()
-          .id(applicationContentId)
-          .proceedings(List.of(
-              Proceeding.builder()
-                  .leadProceeding(true)
-                  .categoryOfLaw("Crime")
-                  .matterType("Defence")
-                  .usedDelegatedFunctions(true)
-                  .description("Test proceeding")
-                  .build()
-          )).build();
-      String laaReference = "laa_reference";
-    List<Individual> expectedIndividuals = List.of(
-        Individual.builder().build(),
-        Individual.builder().build()
-    );
-
-    ApplicationCreateRequest expectedApplicationCreateRequest = ApplicationCreateRequest.builder()
-        .status(status)
-        .applicationContent(MapperUtil.getObjectMapper().convertValue(applicationContent, Map.class))
-        .laaReference(laaReference)
-        .individuals(expectedIndividuals)
-        .build();
-
-
-    ApplicationEntity actualApplicationEntity = applicationMapper.toApplicationEntity(expectedApplicationCreateRequest);
+    ApplicationEntity actualApplicationEntity =
+        applicationMapper.toApplicationEntity(expectedApplicationCreateRequest);
 
     assertThat(actualApplicationEntity.getStatus()).isEqualTo(status);
     assertThat(actualApplicationEntity.getLaaReference()).isEqualTo(laaReference);
@@ -150,7 +174,7 @@ class ApplicationMapperTest {
     assertThat(actualApplicationEntity.getApplicationContent())
         .isNotNull()
         .usingRecursiveComparison()
-        .isEqualTo(MapperUtil.getObjectMapper().convertValue(applicationContent, Map.class));
+        .isEqualTo(applicationContent);
   }
 
   @Test
@@ -159,50 +183,61 @@ class ApplicationMapperTest {
     assertThat(applicationMapper.toApplicationEntity(request)).isNull();
   }
 
-    @Test
-    void givenEmptyApplicationUpdateRequest_whenUpdateApplicationEntity_thenMapperOnlyUpdatesMandatoryFields() {
-        ApplicationStatus initialStatus = ApplicationStatus.APPLICATION_IN_PROGRESS;
-        Map<String, Object> initialContent = Map.of("key", "value");
-        Instant createdAt = Instant.now().minusSeconds(10000);
-        Instant modifiedAt = Instant.now().minusSeconds(5000);
+  @Test
+  void
+      givenEmptyApplicationUpdateRequest_whenUpdateApplicationEntity_thenMapperOnlyUpdatesMandatoryFields() {
+    ApplicationStatus initialStatus = ApplicationStatus.APPLICATION_IN_PROGRESS;
+    Map<String, Object> initialContent = Map.of("key", "value");
+    Instant createdAt = Instant.now().minusSeconds(10000);
+    Instant modifiedAt = Instant.now().minusSeconds(5000);
 
-    ApplicationEntity entityToAffect = ApplicationEntity.builder()
-        .status(initialStatus)
-        .applicationContent(initialContent)
-        .createdAt(createdAt)
-        .modifiedAt(modifiedAt)
-        .build();
+    ApplicationEntity entityToAffect =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class,
+            builder ->
+                builder
+                    .status(initialStatus)
+                    .applicationContent(initialContent)
+                    .createdAt(createdAt)
+                    .modifiedAt(modifiedAt));
 
-    ApplicationUpdateRequest req = new ApplicationUpdateRequest(); // all nulls except applicationContent
+    ApplicationUpdateRequest req =
+        DataGenerator.createDefault(
+            ApplicationUpdateRequestGenerator.class,
+            builder -> builder.status(null).applicationContent(null));
+
     applicationMapper.updateApplicationEntity(entityToAffect, req);
 
     assertThat(entityToAffect.getStatus()).isEqualTo(initialStatus);
-    assertThat(entityToAffect.getApplicationContent()).isNotNull().hasSize(0);
+    assertThat(entityToAffect.getApplicationContent()).isNull();
     assertThat(entityToAffect.getCreatedAt()).isEqualTo(createdAt);
     assertThat(entityToAffect.getModifiedAt()).isEqualTo(modifiedAt);
   }
 
-    @Test
-    void givenApplicationUpdateRequest_whenUpdateApplicationEntity_thenMapperUpdatesRelevantFields() {
-        ApplicationStatus initialStatus = ApplicationStatus.APPLICATION_IN_PROGRESS;
-        Map<String, Object> initialContent = Map.of("key", "value");
-        Instant createdAt = Instant.now().minusSeconds(10000);
-        Instant modifiedAt = Instant.now().minusSeconds(5000);
+  @Test
+  void givenApplicationUpdateRequest_whenUpdateApplicationEntity_thenMapperUpdatesRelevantFields() {
+    ApplicationStatus initialStatus = ApplicationStatus.APPLICATION_IN_PROGRESS;
+    Map<String, Object> initialContent = Map.of("key", "value");
+    Instant createdAt = Instant.now().minusSeconds(10000);
+    Instant modifiedAt = Instant.now().minusSeconds(5000);
 
-    ApplicationEntity entityToAffect = ApplicationEntity.builder()
-        .status(initialStatus)
-        .applicationContent(initialContent)
-        .createdAt(createdAt)
-        .modifiedAt(modifiedAt)
-        .build();
+    ApplicationEntity entityToAffect =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class,
+            builder ->
+                builder
+                    .status(initialStatus)
+                    .applicationContent(initialContent)
+                    .createdAt(createdAt)
+                    .modifiedAt(modifiedAt));
 
-        ApplicationStatus updatedStatus = ApplicationStatus.APPLICATION_SUBMITTED;
-        Map<String, Object> updatedContent = Map.of("newKey", "newValue");
+    ApplicationStatus updatedStatus = ApplicationStatus.APPLICATION_SUBMITTED;
+    Map<String, Object> updatedContent = Map.of("newKey", "newValue");
 
-    ApplicationUpdateRequest applicationUpdateRequest = ApplicationUpdateRequest.builder()
-        .status(updatedStatus)
-        .applicationContent(updatedContent)
-        .build();
+    ApplicationUpdateRequest applicationUpdateRequest =
+        DataGenerator.createDefault(
+            ApplicationUpdateRequestGenerator.class,
+            builder -> builder.status(updatedStatus).applicationContent(updatedContent));
 
     applicationMapper.updateApplicationEntity(entityToAffect, applicationUpdateRequest);
 
@@ -214,42 +249,23 @@ class ApplicationMapperTest {
 
   @Test
   void givenApplicationWithOpponents_whenToApplication_thenMapsOpponentsCorrectly() {
-    ApplicationStatus initialStatus = ApplicationStatus.APPLICATION_IN_PROGRESS;
-    Instant createdAt = Instant.now().minusSeconds(10000);
-    Instant modifiedAt = Instant.now().minusSeconds(5000);
-    Map<String, Object> opposable = Map.of(
-        "opposableType", "ApplicationMeritsTask::Individual",
-        "firstName", "John",
-        "lastName", "Smith",
-        "name", "Acme Ltd"
-    );
+    Map<String, Object> opposable =
+        Map.of("firstName", "John", "lastName", "Smith", "name", "Acme Ltd");
+    Map<String, Object> opponent =
+        Map.of("opposableType", "ApplicationMeritsTask::Individual", "opposable", opposable);
+    Map<String, Object> content =
+        Map.of("applicationMerits", Map.of("opponents", List.of(opponent)));
 
-    Map<String, Object> opponent = Map.of(
-        "opposable", opposable
-    );
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.applicationContent(content));
 
-    Map<String, Object> merits = Map.of(
-        "opponents", List.of(opponent)
-    );
+    ApplicationResponse result = applicationMapper.toApplication(entity);
 
-    Map<String, Object> content = Map.of(
-        "applicationMerits", merits
-    );
+    assertThat(result.getOpponents()).isNotNull().hasSize(1);
 
-    ApplicationEntity entity = ApplicationEntity.builder()
-        .status(initialStatus)
-        .applicationContent(content)
-        .createdAt(createdAt)
-        .modifiedAt(modifiedAt)
-        .build();
-
-    Application result = applicationMapper.toApplication(entity);
-
-    assertThat(result.getOpponents()).isNotNull();
-    assertThat(result.getOpponents()).hasSize(1);
-
-    Opponent mapped = result.getOpponents().get(0);
-    assertThat(mapped.getOpposableType()).isEqualTo("ApplicationMeritsTask::Individual");
+    OpponentResponse mapped = result.getOpponents().getFirst();
+    assertThat(mapped.getOpponentType()).isEqualTo("ApplicationMeritsTask::Individual");
     assertThat(mapped.getFirstName()).isEqualTo("John");
     assertThat(mapped.getLastName()).isEqualTo("Smith");
     assertThat(mapped.getOrganisationName()).isEqualTo("Acme Ltd");
@@ -257,25 +273,13 @@ class ApplicationMapperTest {
 
   @Test
   void givenApplicationWithEmptyOpponentsList_whenToApplication_thenReturnsEmptyList() {
-    ApplicationStatus initialStatus = ApplicationStatus.APPLICATION_IN_PROGRESS;
-    Instant createdAt = Instant.now().minusSeconds(10000);
-    Instant modifiedAt = Instant.now().minusSeconds(5000);
-    Map<String, Object> merits = Map.of(
-        "opponents", List.of()
-    );
+    Map<String, Object> content = Map.of("applicationMerits", Map.of("opponents", List.of()));
 
-    Map<String, Object> content = Map.of(
-        "applicationMerits", merits
-    );
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.applicationContent(content));
 
-    ApplicationEntity entity = ApplicationEntity.builder()
-        .applicationContent(content)
-        .status(initialStatus)
-        .createdAt(createdAt)
-        .modifiedAt(modifiedAt)
-        .build();
-
-    Application result = applicationMapper.toApplication(entity);
+    ApplicationResponse result = applicationMapper.toApplication(entity);
 
     assertThat(result.getOpponents()).isNotNull();
     assertThat(result.getOpponents()).isEmpty();
@@ -283,44 +287,365 @@ class ApplicationMapperTest {
 
   @Test
   void givenOpponentWithMissingFirstName_whenToApplication_thenMapsRemainingFields() {
-    ApplicationStatus initialStatus = ApplicationStatus.APPLICATION_IN_PROGRESS;
-    Instant createdAt = Instant.now().minusSeconds(10000);
-    Instant modifiedAt = Instant.now().minusSeconds(5000);
-    Map<String, Object> opposable = Map.of(
-        "opposableType", "ApplicationMeritsTask::Individual",
-        "lastName", "Smith",
-        "name", "Acme Ltd"
-    );
+    Map<String, Object> opposable = Map.of("lastName", "Smith", "name", "Acme Ltd");
+    Map<String, Object> opponent =
+        Map.of("opposableType", "ApplicationMeritsTask::Individual", "opposable", opposable);
+    Map<String, Object> content =
+        Map.of("applicationMerits", Map.of("opponents", List.of(opponent)));
 
-    Map<String, Object> opponent = Map.of(
-        "opposable", opposable
-    );
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.applicationContent(content));
 
-    Map<String, Object> merits = Map.of(
-        "opponents", List.of(opponent)
-    );
+    ApplicationResponse result = applicationMapper.toApplication(entity);
 
-    Map<String, Object> content = Map.of(
-        "applicationMerits", merits
-    );
+    assertThat(result.getOpponents()).isNotNull().hasSize(1);
 
-    ApplicationEntity entity = ApplicationEntity.builder()
-        .applicationContent(content)
-        .status(initialStatus)
-        .createdAt(createdAt)
-        .modifiedAt(modifiedAt)
-        .build();
+    var mapped = result.getOpponents().getFirst();
 
-    Application result = applicationMapper.toApplication(entity);
-
-    assertThat(result.getOpponents()).isNotNull();
-    assertThat(result.getOpponents()).hasSize(1);
-
-    var mapped = result.getOpponents().get(0);
-
-    assertThat(mapped.getOpposableType()).isEqualTo("ApplicationMeritsTask::Individual");
+    assertThat(mapped.getOpponentType()).isEqualTo("ApplicationMeritsTask::Individual");
     assertThat(mapped.getFirstName()).isNull();
     assertThat(mapped.getLastName()).isEqualTo("Smith");
     assertThat(mapped.getOrganisationName()).isEqualTo("Acme Ltd");
+  }
+
+  @Test
+  void givenApplicationWithContactEmailOnly_whenToApplication_thenMapsProviderWithContactEmail() {
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.officeCode(null));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertProviderEquals(result.getProvider(), null, "test@example.com");
+  }
+
+  @Test
+  void givenApplicationWithoutContactEmail_whenToApplication_thenProviderHasNullContactEmail() {
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class,
+            builder -> builder.applicationContent(Map.of("otherField", "value")));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertProviderEquals(result.getProvider(), "officeCode", null);
+  }
+
+  @Test
+  void
+      givenApplicationWithNullApplicationContent_whenToApplication_thenProviderHasOfficeCodeOnly() {
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.applicationContent(null));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertProviderEquals(result.getProvider(), "officeCode", null);
+  }
+
+  @Test
+  void givenApplicationWithNoProviderData_whenToApplication_thenProviderIsNull() {
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class,
+            builder -> builder.officeCode(null).applicationContent(Map.of()));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertProviderEquals(result.getProvider(), null, null);
+  }
+
+  @Test
+  void givenApplicationEntityWithNullSubmittedAt_whenToApplication_thenSubmittedAtIsNull() {
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.submittedAt(null));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertThat(result.getSubmittedAt()).isNull();
+  }
+
+  @Test
+  void givenApplicationEntityWithSubmittedAt_whenToApplication_thenSubmittedAtIsMapped() {
+    Instant submittedAt = Instant.parse("2025-03-10T08:00:00Z");
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.submittedAt(submittedAt));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertThat(result.getSubmittedAt())
+        .isEqualTo(OffsetDateTime.ofInstant(submittedAt, ZoneOffset.UTC));
+  }
+
+  @Test
+  void givenApplicationEntityWithNullDecision_whenToApplication_thenDecisionStatusIsNull() {
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.decision(null));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertThat(result.getDecisionStatus()).isNull();
+  }
+
+  @Test
+  void givenApplicationEntityWithDecision_whenToApplication_thenDecisionStatusIsMapped() {
+    DecisionEntity decision =
+        DataGenerator.createDefault(
+            DecisionEntityGenerator.class,
+            builder -> builder.overallDecision(DecisionStatus.GRANTED));
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.decision(decision));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertThat(result.getDecisionStatus()).isEqualTo(DecisionStatus.GRANTED);
+  }
+
+  @Test
+  void
+      givenApplicationWithProceedingWithNullMeritsDecision_whenToApplication_thenProceedingMeritsDecisionIsNull() {
+    ProceedingEntity proceeding =
+        DataGenerator.createDefault(
+            ProceedingsEntityGenerator.class, builder -> builder.meritsDecision(null));
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.proceedings(Set.of(proceeding)));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertThat(result.getProceedings()).isNotNull().hasSize(1);
+    assertThat(result.getProceedings().getFirst().getMeritsDecision()).isNull();
+  }
+
+  @Test
+  void
+      givenApplicationWithProceedingWithMeritsDecision_whenToApplication_thenProceedingMeritsDecisionIsMapped() {
+    MeritsDecisionEntity meritsDecision =
+        DataGenerator.createDefault(
+            MeritsDecisionsEntityGenerator.class,
+            builder -> builder.decision(MeritsDecisionStatus.GRANTED));
+    ProceedingEntity proceeding =
+        DataGenerator.createDefault(
+            ProceedingsEntityGenerator.class, builder -> builder.meritsDecision(meritsDecision));
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.proceedings(Set.of(proceeding)));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertThat(result.getProceedings()).isNotNull().hasSize(1);
+    assertThat(result.getProceedings().getFirst().getMeritsDecision())
+        .isEqualTo(MeritsDecisionStatus.GRANTED);
+  }
+
+  @Test
+  void givenApplicationMeritsWithNullOpponentsList_whenToApplication_thenOpponentsIsEmpty() {
+    Map<String, Object> meritsMap = new HashMap<>();
+    meritsMap.put("opponents", null);
+    Map<String, Object> content = Map.of("applicationMerits", meritsMap);
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.applicationContent(content));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertThat(result.getOpponents()).isEmpty();
+  }
+
+  @Test
+  void
+      givenApplicationMeritsWithNullInvolvedChildren_whenToApplication_thenProceedingInvolvedChildrenIsEmpty() {
+    UUID applyProceedingId = UUID.randomUUID();
+    UUID childId = UUID.randomUUID();
+
+    ApplicationContent applicationContent =
+        DataGenerator.createDefault(
+            ApplicationContentGenerator.class,
+            b ->
+                b.applicationMerits(
+                        ApplicationMerits.builder()
+                            .opponents(List.of())
+                            .involvedChildren(null)
+                            .build())
+                    .proceedingMerits(
+                        List.of(
+                            DataGenerator.createDefault(
+                                ProceedingMeritsGenerator.class,
+                                meritsBuilder ->
+                                    meritsBuilder
+                                        .proceedingId(applyProceedingId)
+                                        .proceedingLinkedChildren(
+                                            List.of(
+                                                ProceedingLinkedChild.builder()
+                                                    .involvedChildId(childId)
+                                                    .build()))))));
+
+    ProceedingEntity proceeding =
+        DataGenerator.createDefault(
+            ProceedingsEntityGenerator.class,
+            builder -> builder.applyProceedingId(applyProceedingId));
+
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class,
+            builder ->
+                builder
+                    .proceedings(Set.of(proceeding))
+                    .applicationContent(
+                        (Map<String, Object>)
+                            objectMapper.convertValue(applicationContent, Map.class)));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertThat(result.getProceedings()).isNotNull().hasSize(1);
+    assertThat(result.getProceedings().getFirst().getInvolvedChildren()).isEmpty();
+  }
+
+  private void assertProviderEquals(
+      ProviderResponse actual, String expectedOfficeCode, String expectedContactEmail) {
+    if (expectedOfficeCode == null && expectedContactEmail == null) {
+      assertThat(actual).isNull();
+    } else {
+      assertThat(actual).isNotNull();
+      assertThat(actual.getOfficeCode()).isEqualTo(expectedOfficeCode);
+      assertThat(actual.getContactEmail()).isEqualTo(expectedContactEmail);
+    }
+  }
+
+  @Test
+  void givenApplicationWithProceedings_whenToApplication_thenProceedingsListIsPopulated() {
+    ProceedingEntity proceeding = DataGenerator.createDefault(ProceedingsEntityGenerator.class);
+
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.proceedings(Set.of(proceeding)));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertThat(result.getProceedings()).isNotNull().hasSize(1);
+  }
+
+  @Test
+  void givenApplicationWithNullProceedings_whenToApplication_thenProceedingsNotSet() {
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class, builder -> builder.proceedings(null));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertThat(result.getProceedings()).isNullOrEmpty();
+  }
+
+  @Test
+  void
+      givenApplicationWithMatchedInvolvedChild_whenToApplication_thenProceedingContainsInvolvedChild() {
+    UUID applyProceedingId = UUID.randomUUID();
+
+    ApplicationContent applicationContent =
+        DataGenerator.createDefault(
+            ApplicationContentGenerator.class,
+            builder ->
+                builder.proceedingMerits(
+                    List.of(
+                        DataGenerator.createDefault(
+                            ProceedingMeritsGenerator.class,
+                            meritsBuilder -> meritsBuilder.proceedingId(applyProceedingId)))));
+
+    ProceedingEntity proceeding =
+        DataGenerator.createDefault(
+            ProceedingsEntityGenerator.class,
+            builder -> builder.applyProceedingId(applyProceedingId));
+
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class,
+            builder ->
+                builder
+                    .proceedings(Set.of(proceeding))
+                    .applicationContent(
+                        (Map<String, Object>)
+                            objectMapper.convertValue(applicationContent, Map.class)));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertThat(result.getProceedings()).isNotNull().hasSize(1);
+    ApplicationProceedingResponse proceedingResponse = result.getProceedings().getFirst();
+    assertThat(proceedingResponse.getInvolvedChildren()).isNotNull().hasSize(1);
+    InvolvedChildResponse involvedChild = proceedingResponse.getInvolvedChildren().getFirst();
+    assertThat(involvedChild.getFullName())
+        .isEqualTo(
+            applicationContent
+                .getApplicationMerits()
+                .getInvolvedChildren()
+                .getFirst()
+                .getFullName());
+    assertThat(involvedChild.getDateOfBirth())
+        .isEqualTo(
+            applicationContent
+                .getApplicationMerits()
+                .getInvolvedChildren()
+                .getFirst()
+                .getDateOfBirth());
+  }
+
+  private Stream<Arguments> emptyInvolvedChildrenCases() {
+    UUID applyProceedingId = UUID.randomUUID();
+    UUID nonExistentChildId = UUID.randomUUID();
+
+    ApplicationContent withUnresolvableChild =
+        DataGenerator.createDefault(
+            ApplicationContentGenerator.class,
+            builder ->
+                builder.proceedingMerits(
+                    List.of(
+                        DataGenerator.createDefault(
+                            ProceedingMeritsGenerator.class,
+                            meritsBuilder ->
+                                meritsBuilder
+                                    .proceedingId(applyProceedingId)
+                                    .proceedingLinkedChildren(
+                                        List.of(
+                                            ProceedingLinkedChild.builder()
+                                                .involvedChildId(nonExistentChildId)
+                                                .build()))))));
+
+    ApplicationContent withNoProceedingMerits =
+        DataGenerator.createDefault(
+            ApplicationContentGenerator.class, builder -> builder.proceedingMerits(List.of()));
+
+    return Stream.of(
+        Arguments.of("unresolvable child ID", applyProceedingId, withUnresolvableChild),
+        Arguments.of("no proceeding merits", UUID.randomUUID(), withNoProceedingMerits));
+  }
+
+  @ParameterizedTest(name = "{0}")
+  @MethodSource("emptyInvolvedChildrenCases")
+  void
+      givenApplicationWithNoResolvableChildren_whenToApplication_thenProceedingInvolvedChildrenIsEmpty(
+          String description, UUID applyProceedingId, ApplicationContent applicationContent) {
+    ProceedingEntity proceeding =
+        DataGenerator.createDefault(
+            ProceedingsEntityGenerator.class,
+            builder -> builder.applyProceedingId(applyProceedingId));
+
+    ApplicationEntity entity =
+        DataGenerator.createDefault(
+            ApplicationEntityGenerator.class,
+            builder ->
+                builder
+                    .proceedings(Set.of(proceeding))
+                    .applicationContent(
+                        (Map<String, Object>)
+                            objectMapper.convertValue(applicationContent, Map.class)));
+
+    ApplicationResponse result = applicationMapper.toApplication(entity);
+
+    assertThat(result.getProceedings()).isNotNull().hasSize(1);
+    assertThat(result.getProceedings().getFirst().getInvolvedChildren()).isEmpty();
   }
 }
